--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 concept_list = jsPsych.randomization.shuffle(concept_list);
                 var block_break0 = {
                     type: jsPsychHtmlButtonResponse,
-                    stimulus: "<p>In this block of trials, you will be asked to rate how much you associate each word on a scale where the endpoints are:</p > " +
+                    stimulus: "<p>In this block of trials, you will be asked to rate how much you associate each concept on a scale where the endpoints are:</p > " +
                         "<p style = 'font-size:150%; font-weight: bold'>" + scales[i] + "</p><br></br>",
                     choices: ['Continue'],
                 };
