--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             //get the SONA id from the url
 
 
-            const sona_id =jsPsych.data.getURLVariable().id;
+            const sona_id =jsPsych.data.getURLVariable('id');
             const subject_id = jsPsych.randomization.randomID(10);
 
             const filename = `${subject_id}.csv`;
