add back the stuff

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 button_label: "Start Experiment",
             };
 
-            // timeline.push(consentSign);
+            timeline.push(consentSign);
 
             // Overview instructions of experiment
             var overview_instructions = {
@@ -140,7 +140,7 @@
                     '<p> It will take about 25 minutes to complete both parts.',
                 choices: ['Continue']
             }
-            // timeline.push(overview_instructions);
+            timeline.push(overview_instructions);
 
             var age_lang_demo = {
                 type: jsPsychSurveyText,
@@ -154,6 +154,7 @@
                 button_label: "Done",
                 randomize_question_order: false
             }
+            timeline.push(age_lang_demo);
 
 
             var instructions = {
@@ -236,110 +237,110 @@
             scales = jsPsych.randomization.shuffle(scales);
 
 
-            // for (i = 0; i < 4; i++) {
-            //     let practice_concept = affect_list[0];
-            //     let task
-            //     if (i == 0) {
-            //         task = "Please move the slider all the way to the <br> right endpoint of the scale"
-            //     }
-            //     else if (i == 1) {
-            //         task = "Please move the slider all the way to the <br> left endpoint of the scale"
-            //     }
-            //     else if (i == 2) {
-            //         task = "Please move the slider halfway between the center and right endpoint of the scale"
-            //     }
-            //     else if (i == 3) {
-            //         task = "Please move the slider halfway between the center and left endpoint of the scale"
-            //     }
-            //     var rating_trial = {
-            //         type: jsPsychHtmlSliderResponse,
-            //         stimulus: `<div style="width:500px;">
-            //                         <p style="font-size:25px;">${task}</p>
+            for (i = 0; i < 4; i++) {
+                let practice_concept = affect_list[0];
+                let task
+                if (i == 0) {
+                    task = "Please move the slider all the way to the <br> right endpoint of the scale"
+                }
+                else if (i == 1) {
+                    task = "Please move the slider all the way to the <br> left endpoint of the scale"
+                }
+                else if (i == 2) {
+                    task = "Please move the slider halfway between the center and right endpoint of the scale"
+                }
+                else if (i == 3) {
+                    task = "Please move the slider halfway between the center and left endpoint of the scale"
+                }
+                var rating_trial = {
+                    type: jsPsychHtmlSliderResponse,
+                    stimulus: `<div style="width:500px;">
+                                    <p style="font-size:25px;">${task}</p>
 
-            //                         </div>
-            //                     </div>`,
-            //         labels: ['Not at all', 'Very Much'],
-            //         // slider_width: 500,
-            //         require_movement: false,
-            //         step: 1,
-            //         slider_start: 0,
-            //         min: -200,
-            //         max: 200,
-            //         response_ends_trial: true,
-            //         post_trial_gap: 500,
-            //         data: {
-            //             //  image_path: maps[i],
-            //             //  concept: practice_concept,
-            //             practiceTrial: true,
-            //             practiceTrialNum: i
-            //         },
-            //         on_finish: function (data) {
-            //             var slider_response = data.response;
-            //             var trialNum = data.practiceTrialNum;
-            //             let upperLimit;
-            //             let lowerLimit;
-            //             if (trialNum == 0) {
-            //                 upperLimit = 220;
-            //                 lowerLimit = 180;
-            //             }
-            //             else if (trialNum == 1) {
-            //                 upperLimit = -180;
-            //                 lowerLimit = -220;
-            //             }
-            //             else if (trialNum == 2) {
-            //                 upperLimit = 110;
-            //                 lowerLimit = 80;
-            //             }
-            //             else if (trialNum == 3) {
-            //                 upperLimit = -80;
-            //                 lowerLimit = -110;
-            //             }
-            //             console.log(slider_response)
-            //             console.log(upperLimit, lowerLimit)
-            //             if (slider_response <= upperLimit && slider_response >= lowerLimit) {
-            //                 data.correct = true;
-            //             }
-            //             else {
-            //                 data.correct = false;
-            //             }
-            //         }
+                                    </div>
+                                </div>`,
+                    labels: ['Not at all', 'Very Much'],
+                    // slider_width: 500,
+                    require_movement: false,
+                    step: 1,
+                    slider_start: 0,
+                    min: -200,
+                    max: 200,
+                    response_ends_trial: true,
+                    post_trial_gap: 500,
+                    data: {
+                        //  image_path: maps[i],
+                        //  concept: practice_concept,
+                        practiceTrial: true,
+                        practiceTrialNum: i
+                    },
+                    on_finish: function (data) {
+                        var slider_response = data.response;
+                        var trialNum = data.practiceTrialNum;
+                        let upperLimit;
+                        let lowerLimit;
+                        if (trialNum == 0) {
+                            upperLimit = 220;
+                            lowerLimit = 180;
+                        }
+                        else if (trialNum == 1) {
+                            upperLimit = -180;
+                            lowerLimit = -220;
+                        }
+                        else if (trialNum == 2) {
+                            upperLimit = 110;
+                            lowerLimit = 80;
+                        }
+                        else if (trialNum == 3) {
+                            upperLimit = -80;
+                            lowerLimit = -110;
+                        }
+                        console.log(slider_response)
+                        console.log(upperLimit, lowerLimit)
+                        if (slider_response <= upperLimit && slider_response >= lowerLimit) {
+                            data.correct = true;
+                        }
+                        else {
+                            data.correct = false;
+                        }
+                    }
 
-            //     };
+                };
 
 
-            //     var rating_feedback = {
-            //         type: jsPsychHtmlButtonResponse,
-            //         stimulus: function () {
-            //             var last_resp_correct = jsPsych.data.getLastTrialData().values()[0].correct;
-            //             if (last_resp_correct) {
-            //                 return "<p align='center'><b>Good job!</b> Click on 'Continue' to proceed.</p>"
-            //             } else {
-            //                 return "<p align='center'><b>Not quite!</b> The slider was not placed near the instructed located. Click on 'Continue' to try again. </p>"
-            //             }
-            //         },
-            //         choices: ['Continue']
-            //     };
+                var rating_feedback = {
+                    type: jsPsychHtmlButtonResponse,
+                    stimulus: function () {
+                        var last_resp_correct = jsPsych.data.getLastTrialData().values()[0].correct;
+                        if (last_resp_correct) {
+                            return "<p align='center'><b>Good job!</b> Click on 'Continue' to proceed.</p>"
+                        } else {
+                            return "<p align='center'><b>Not quite!</b> The slider was not placed near the instructed located. Click on 'Continue' to try again. </p>"
+                        }
+                    },
+                    choices: ['Continue']
+                };
 
-            //     var comp1_loop = {
-            //         timeline: [rating_trial, rating_feedback],
-            //         loop_function: function (data) {
-            //             console.log('data: ', data.values());
-            //             if (data.values()[0].correct == true) {
-            //                 return false;
-            //             } else {
-            //                 return true;
-            //             }
-            //         }
-            //     };
-            //     timeline.push(comp1_loop);
-            // }
+                var comp1_loop = {
+                    timeline: [rating_trial, rating_feedback],
+                    loop_function: function (data) {
+                        console.log('data: ', data.values());
+                        if (data.values()[0].correct == true) {
+                            return false;
+                        } else {
+                            return true;
+                        }
+                    }
+                };
+                timeline.push(comp1_loop);
+            }
 
-            // var practice_complete = {
-            //     type: jsPsychHtmlButtonResponse,
-            //     stimulus: "<p>Great job! You've completed the practice trials. Now you will begin the main task.</p>",
-            //     choices: ['Continue']
-            // };
-            // timeline.push(practice_complete);
+            var practice_complete = {
+                type: jsPsychHtmlButtonResponse,
+                stimulus: "<p>Great job! You've completed the practice trials. Now you will begin the main task.</p>",
+                choices: ['Continue']
+            };
+            timeline.push(practice_complete);
 
 
 
