new datapipe proj

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             const filename = `${subject_id}.csv`;
 
-            const condition_num = await jsPsychPipe.getCondition("vl24Bq6ZoMZm");
+            const condition_num = await jsPsychPipe.getCondition("UzkrO7UoVPqR");
             // const condition_num = 0;
 
             scales = scale_list[condition_num];
@@ -422,7 +422,7 @@
             const save_data = {
                 type: jsPsychPipe,
                 action: "save",
-                experiment_id: "vl24Bq6ZoMZm",
+                experiment_id: "UzkrO7UoVPqR",
                 filename: filename,
                 data_string: () => jsPsych.data.get().csv()
             };
